# kikolens

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ollama  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonar.yml  tests.yml
docker/: ollama-entrypoint.sh
kikolens/: __init__.py
kikolens/ai/: insights.py
kikolens/analyze/: automl.py  clustering.py  discovery.py  stats.py
kikolens/cli/: main.py
kikolens/dashboard/: app.py
kikolens/sql/: generator.py  runner.py
kikolens/utils/: loaders.py
tests/: conftest.py  test_automl.py  test_clustering.py  test_discovery.py  test_loaders.py  test_sql_runner.py  test_stats.py
