[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kikolens"
version = "1.0.0"
description = "KikoLens AI: The Enterprise Data Intelligence Platform"
readme = "README.md"
authors = [
  { name = "KikoLens Team", email = "support@kikolens.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "plotly>=5.19.0",
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0"
]

[project.scripts]
kikolens = "kikolens.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kikolens*"]
